@@ -83,6 +83,7 @@ enum oci8_bind_type {
   BIND_INTEGER_VIA_ORA_NUMBER,
   BIND_TIME_VIA_ORA_DATE,
   BIND_FLOAT,
+  BIND_BINARY_DOUBLE,
   BIND_ORA_DATE,
   BIND_ORA_NUMBER,
   BIND_HANDLE
