@@ -1,6 +1,10 @@
 2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
 	* test/config.rb, test/test_dbi.rb, test/test_describe.rb,
-	  test/test_oci8.rb: add 'purge' option to 'drop table' statement.
+	  test/test_oci8.rb: add 'purge' option to 'drop table' statement
+	   when Oracle 10g or upper.
+	* ext/oci8/bind.c, ext/oci8/const.c, ext/oci8/oci8.h, ext/oci8/stmt.c,
+	  lib/oci8.rb.in, test/test_oci8.rb: add OCI8::BindType::BinaryDouble
+	   when SQLT_BDOUBLE is defined.
 
 2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oraconf.rb: fix for FreeBSD oracle8-client port.
